# typify

./: .dockerignore  .gitignore  Dockerfile  render.yaml
backend/: LICENSE  README.md  ingredients.bk.csv  ingredients.csv  labels.csv  pon_scrape.py  pyproject.toml
backend/tests/integration/: conftest.py  test_ingredient.py  test_meal.py
backend/typify/: database.py  main.py  utils.py
backend/typify/api/: deps.py
backend/typify/api/api_v1/: api.py
backend/typify/api/api_v1/endpoints/: file.py  ingredient.py  raw_ingredient.py
backend/typify/cli/: __init__.py  db.py  importcli.py  main.py  serve.py
backend/typify/core/: config.py
backend/typify/migrations/: alembic.ini  env.py
backend/typify/migrations/versions/: bde64be33956_inital_db.py
backend/typify/ml_models/: ingredient_classifier.py
backend/typify/ml_models/ingredient-classifier/1/: fingerprint.pb  keras_metadata.pb  saved_model.pb
backend/typify/ml_models/ingredient-classifier/1/variables/: variables.data-00000-of-00001  variables.index
backend/typify/models/: __init__.py  ingredient.py  raw_ingredient.py
backend/typify/schemas/: __init__.py  ingredient.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx  index.jsx
frontend/src/app/: NotFound.jsx  store.js
frontend/src/features/classify/: Classify.jsx  ClassifyItem.jsx  MealCreateUpdate.jsx  RecipeDisplay.jsx  ingredientsSlice.js  rawIngredientsSlice.js
frontend/src/features/nav/: NavBar.jsx
frontend/src/ui/: Autocomplete.jsx  Card.jsx  Header.jsx  Input.jsx  Modal.jsx  NavButton.jsx
(+3 files in other folders)
