[tool.poetry]
name = "typify"
version = "0.1.0"
description = ""
authors = ["Samuel Taylor <samtaylor.uk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
fastapi = "^0.95.2"
alembic = "^1.11.1"
sqlalchemy = "^2.0.15"
aiosqlite = "^0.19.0"
uvicorn = "^0.22.0"
typer = "^0.9.0"
pyhumps = "^3.8.0"
httpx = "^0.24.1"
beautifulsoup4 = "^4.12.2"
rich = "^13.4.1"
shellingham = "^1.5.0.post1"
asyncpg = "^0.27.0"
pandas = "^2.0.2"
gunicorn = "^20.1.0"
numpy = "^1.24.3"
nltk = "^3.8.1"
tensorflow-io-gcs-filesystem = "0.23.1"
tensorflow = {version = "^2.12.0", platform = "linux"}
tensorflow-intel = {version = "^2.12.0", platform = "win32"}

[tool.poetry.scripts]
typify = "typify.cli:main"

[tool.poetry.dev-dependencies]
mypy = "^1.3.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[tool.poetry.group.dev.dependencies]
rope = "^1.8.0"
wemake-python-styleguide = "^0.18.0"
autopep8 = "^2.0.2"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test* *Tests"
addopts = "-vv -x"
asyncio_mode = "auto"
pythonpath = ["."]


[tool.mypy]
check_untyped_defs = true
namespace_packages = true
plugins = "sqlalchemy.ext.mypy.plugin"
pretty = true
show_error_context = true
exclude = ".venv"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "backoff.*",
    "opentracing.*",
]
ignore_missing_imports = true